# reading-code-of-nginx-1.9.2

./: README.md
book/: master_worker的具体实现.md  信号处理.md  平滑升级.md  日志系统.md
nginx-1.9.2/: CMakeLists.txt
nginx-1.9.2/conf/: nginx.conf
nginx-1.9.2/objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h  ngx_modules.c
nginx-1.9.2/src/: demo.c
nginx-1.9.2/src/core/: nginx.c  ngx_connection.c  ngx_connection.h  ngx_core.h  ngx_cycle.c  ngx_cycle.h  ngx_list.c  ngx_list.h  ngx_log.c  ngx_log.h  ngx_output_chain.c
nginx-1.9.2/src/event/: ngx_event_accept.c
nginx-1.9.2/src/http/: ngx_http_core_module.c  ngx_http_request.c
nginx-1.9.2/src/http_mytest_module/: ngx_http_mytest_module.c
nginx-1.9.2/src/my_test_module/: ngx_http_mytest_module.c
nginx-1.9.2/src/mytest_config/: mytest_config.c
nginx-1.9.2/src/os/unix/: ngx_channel.c  ngx_process.c  ngx_process.h  ngx_process_cycle.c  ngx_process_cycle.h  ngx_socket.h
pcre-8.38/: Makefile  config.h  config.status  libtool
